Fixed currency overflow issue

--- a/web/stylesheet/treeCounter/_tpo_footer.scss
+++ b/web/stylesheet/treeCounter/_tpo_footer.scss
@@ -67,6 +67,9 @@
         }
         .currency-symbol {
           margin-right: 2px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
         }
         .tax-span {
           background-color: $hoverColor;
